[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/items/cheep_cheep/cheep_cheep1.png" type="Texture" id=1]
[ext_resource path="res://actors/items/cheep_cheep/cheep_cheep2.png" type="Texture" id=2]
[ext_resource path="res://actors/items/cheep_cheep/cheep_cheep.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 9 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 1 )

[node name="CheepCheep" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Following" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Following"]
shape = SubResource( 2 )

[node name="Damage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483650

[node name="Collision" type="CollisionShape2D" parent="Damage"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="WaterCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCheck"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Following" to="." method="_on_Following_body_entered"]
[connection signal="body_exited" from="Following" to="." method="_on_Following_body_exited"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="area_entered" from="WaterCheck" to="." method="_on_WaterCheck_area_entered"]
[connection signal="area_exited" from="WaterCheck" to="." method="_on_WaterCheck_area_exited"]
